--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -226,6 +226,7 @@ header {
     font-size: 8vw;  
     padding-top: 0.25em; 
     text-align: center; 
+    animation: fadeIn 1s ease-out forwards;
 }
 .name-title a {
     text-decoration: none;
@@ -2340,6 +2341,7 @@ footer {
     background-color: white;
     color: #333;
     width: 100%;
+    animation: fadeIn 1s ease-out forwards;
 }
 footer p {
     font-size: 1em;
@@ -2437,7 +2439,7 @@ button.buy-button:hover {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6); 
-  animation: fadeIn .4s forwards;
+  animation: fadeIn 4s ease-out forwards;
   z-index: 10000000000;
 }
 
