--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -232,6 +232,7 @@ header {
     text-decoration: none;
     color: black;
     letter-spacing: 0;
+    transition: color 0.1s ease-out;
 }
 .name-title a:hover {
     color: #E31C79;  
