--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -2228,6 +2228,14 @@ div.image {
     margin-bottom: 10px;
 }
 
+.interview h2{
+    font-size: 32pt;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-block-start: 20px;
+    margin-block-end: 0em;
+}
+
 /* Afbeeldingen */
 .img-banner {
     width: 100%;
