--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -2218,7 +2218,7 @@ div.image {
 .section-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 3rem;
+    gap: 10px;
 }
 
 .interview {
