Adding content and images to the contact page

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -129,7 +129,7 @@
             </a>
         </div>
         <div class="familyName responder-p" onclick="document.getElementById('popup').style.display='block'">
-            Contact&nbsp;<span class="andMore upgrade-thin">and more...</span>
+            Contact
         </div>
 
         <nav id="navbar" class="navbar">
@@ -177,23 +177,30 @@
 
     <section class="content"> <!-- Page navigation, main intro -->
         <div class="row">
-            <!--
-            <img href="images/2025/Presti-a-flourishes-anchors.png" width="100%"/>
-            -->
-            <div class="titleImage" style="padding-top: 10em; height: 12em; background-repeat: no-repeat; background-size: cover; background-image: url('images/2025/Presti-a-flourishes-anchors.png');">
+            <div class="titleImage" style="padding-top: 10em; height: 12em; background-repeat: no-repeat; background-size: cover; background-image: url('images/contact/sketch-background.png');">
             </div>
             <div class="column14 topline ab">
                 <div class="sticky">
-                    <img src="images/logos/Petr-van-Blokland_30-x-40_low-res_01_square.jpeg">
-                    <div style="margin: 0px auto 0px auto; padding: 1em;">
-                        <p class="leading15 contact">
-                            <span class="label">Insta</span><a href="https://www.instagram.com/petrvanblokland/" target="_blank">@petrvanblokland</a><br/>
-                            <span class="label">E</span><a href="#" onclick="this.href='mailto:' + 'info' + '@' + 'typetr.com'">info [at] typetr.com</a><br/>
-                            <span class="label">W</span><a href="www.typetr.com" target="_blank">www.typetr.com</a><br/>
-                            <span class="label">T</span><a href="tel:+31 6 2421 9502">+31 6 2421 9502</a>
-                        </p>                        
-                    </div>
+                    <img class="contact" src="images/logos/TYPETR-Logo.jpg">
                 </div>
+            </div>
+            <div class="column34 upgrade topline">
+                <h1 class="upgrade-bold size36">Contact</h1>
+                <p class="leading15 contact">
+                    <span class="label">Insta</span><a href="https://www.instagram.com/petrvanblokland/" target="_blank">@petrvanblokland</a><br/>
+                    <span class="label">E</span><a href="#" onclick="this.href='mailto:' + 'info' + '@' + 'typetr.com'">info [at] typetr.com</a><br/>
+                    <span class="label">W</span><a href="www.typetr.com" target="_blank">www.typetr.com</a><br/>
+                    <span class="label">T</span><a href="tel:+31 6 2421 9502">+31 6 2421 9502</a>
+                </p>                        
+
+                <h1 class="upgrade-bold size36">What can we do for you?</h1>
+                <p class="size24">If you already purchased a license for one of our typefaces, that’s great. Thank you for that. Meanwhile you may have questions about usage or best practice. E.g. the extended sets of OpenType features may not always be selectable in applications such as InDesign. We’re happy to direct you to how we think that our typefaces can best be used. Don’t hesitate to contact with any question or suggestion that you may have.
+                </p>
+                <img src="images/contact/sketch-A-Z.jpg" class="img-banner" />
+                <p class="size24">Also, we have many many ideas for new typefaces. But making them happen takes a while, so prioritizing is important to know which one to put on top of the list. New typeface ideas varies from extending existing families (e.g. their weight range, adding condensed widths or extending the current glyphset), to complete new designs dedicated to specific tasks and media.</p>
+                <p class="size24">We appreciate to hear from you what is missing in our library. Let is know: your typographic problem could be solved as a regular TYPETR library addition, without making it into a custom project.
+                </p>  
+                <img src="images/contact/sketch-thin-bw.jpg" class="img-banner"/>
             </div>
         </div>
     </section>
