--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -202,6 +202,10 @@ body {
   -webkit-text-size-adjust: none;
 }
 
+.cart-button__label{
+  font-family: "Upgrade Regular", sans-serif; 
+}
+
 header {
     display: block;
     height: 50px;
