--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -2051,6 +2051,7 @@ h2 a.active {
     background-size: contain;
     background-position: center;
     background-repeat: repeat;
+    box-shadow: inset 0 -30px 35px -15px rgba(0, 0, 0, 0.25);
 }
 .titleImageSmall {
     margin-top: 20px; 
