--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -2097,7 +2097,7 @@ h2 a.active {
     width: 100%; 
     height: 350px; /* Fitting Bitcount animations */
     background-size: contain;
-    background-position: center;
+    background-position: center center;
     background-repeat: repeat;
 }
 
