--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -251,7 +251,6 @@ header {
     position: sticky;
     top: 70px;
     z-index: 10;
-    box-shadow: 0 15px 15px rgba(0, 0, 0, 0.2);
 }
 
 .column34 img.contact {
@@ -2086,7 +2085,7 @@ h2 a.active {
     width: 100%; 
     height: 400px; 
     background-size: contain;
-    background-position: center;
+    background-position: center center;
     background-repeat: repeat;
     box-shadow: inset 0 -30px 35px -15px rgba(0, 0, 0, 0.25);
     border-bottom: 1px solid gray;
