Add snap-align to img

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -7,7 +7,7 @@
 }
 
 .row, .column, .type-tester, .character-viewer_blocks, .features,
-.character-viewer__block__character-list > div  {
+.character-viewer__block__character-list > div, img  {
   scroll-snap-align: start; 
 }
 
